@startuml createTag
hide circle
skinparam classAttributeIconSize 0

class BaseApiController {
    #_sender: ISender
    #_httpContextAccessor: HttpContextAccessor
}

class TagsController {
    +Create(CreateTagDTO createTagDTO): Task<IActionResult>
}

class CreateTagCommand {
    +Value: string
}

class CreateTagCommandHandler {
    -_context: IApplicationDbContext
    -_unitOfWork: IUnitOfWork
    +async Task<Result> Handle(CreateTagCommand request, CancellationToken cancellationToken)
}

class IApplicationDbContext {
    +Tags: DbSet<Tag> 
}

class ApplicationDbContext {
    +Tags: DbSet<Tag>
    #OnConfiguring(DbContextOptionsBuilder optionsBuilder): void
}

class Result {
    +IsFailure: bool
    +IsSuccess: bool
    +Errors: IEnumerable<Error> 
    #Result(bool isSuccess, IEnumerable<Error> errors)
    #Result(bool isSuccess, Error error)
    +ThrowIfFailure(): void
    +{static} Success(): Result
    +{static} Failure(Error err): Result
    +{static} Failure(IEnumerable<Error> errs): Result
}

class Error {
    +{static} None: Error
    +{static} Result(Error err): implicit operator
}

class IUnitOfWork {
    SaveChangeAsync(CancellationToken cancellationToken = default): Task
}

class UnitOfWork {
    -_context: ApplicationDbContext
    +SaveChangeAsync(CancellationToken cancellationToken = default): Task
}

class TagError {
    +{static} NotFound: Error
    +{static} AlreadyExited: Error
}

class CreateTagDTO {
    +Value: string
}

class BaseEntity {
    +Id: Guid
}

class Tag {
    +Value: string
    +Code: string 
}

interface "IRequest<TResponse>"
interface "IRequestHandler<TRequest, TResponse>"{
    Handle(TRequest request, CancellationToken cancellationToken): Task<TResponse>
}

'==== Create Tag Post ====
'API Layer
TagsController --|> BaseApiController
TagsController "1"--"1" CreateTagCommand
TagsController "1"--"1" CreateTagDTO
'Application Layer
CreateTagCommand ..|> "IRequest<TResponse>"
CreateTagCommandHandler ..|>  "IRequestHandler<TRequest, TResponse>"
CreateTagCommandHandler "1"--"1" CreateTagCommand
CreateTagCommandHandler "1"--"1" Result
CreateTagCommandHandler "1" o--"1" IUnitOfWork
CreateTagCommandHandler "1" o--"1" IApplicationDbContext
'Domain Layer
Result <|-- Error
Error -- TagError
Tag --|> BaseEntity
'Infrastructure Layer
IUnitOfWork <|.. UnitOfWork
IApplicationDbContext <|.. ApplicationDbContext
ApplicationDbContext "*" o--"1" Tag
@enduml